2007-11-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* unix/tcl.m4:       Added autoconf goo to detect and make use of
	* unix/configure.in: getaddrinfo and friends.
	* unix/configure:    (regenerated)

2007-11-13  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/tclUnixCompat.c (TclpGetHostByName): The six-argument form of
	getaddressbyname_r() uses the fifth argument to indicate whether the
	lookup succeeded or not on at least one platform. [Bug 1618235]

2007-11-13  Don Porter	<dgp@users.sourceforge.net>

	* generic/regcomp.c:	Convert optst() from expensive no-op to a
	cheap no-op.

2007-11-13  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/tclUnixChan.c (CreateSocketAddress): Rewrote to use the
	thread-safe version of gethostbyname() by forward-porting the code
	used in 8.4, and added rudimentary support for getaddrinfo() (not
	enabled by default, as no autoconf-ery written). Part of fix for [Bug
	1618235]

2007-11-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclGet.c (Tcl_Get, Tcl_GetInt): revert use of TclGet*
	macros due to compiler warning.  These cases won't save time either.

	* generic/tclUtil.c (TclReToGlob): add more comments, set interp
	result if specified on error.

2007-11-12  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:     New macro TclResetResult, new iPtr flag 
	* generic/tclExecute.c:   bit INTERP_RESULT_UNCLEAN: shortcut for
	* generic/tclInt.h:       Tcl_ResetResult for the "normal" case:
	* generic/tclProc.c:      TCL_OK, no return options, no errorCode
	* generic/tclResult.c:    nor errorInfo, return at normal level.
	* generic/tclStubLib.c:   [Patch 1830184]
	* generic/tclUtil.c:

	THIS PATCH WAS REVERTED: initial (mis)measurements overstated the
	perfomance wins, which turn out to be tiny. Not worth the
	complication. 
	
2007-11-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclCompCmds.c, generic/tclCompile.c, generic/tclCompile.h: