@@ -7,7 +7,7 @@
  * Copyright (c) 1999 by Scriptics Corporation.
  * All rights reserved.
  *
- * RCS: @(#) $Id: tclUnixInit.c,v 1.79 2007/11/11 05:24:02 das Exp $
+ * RCS: @(#) $Id: tclUnixInit.c,v 1.80 2007/11/13 17:13:07 msofer Exp $
  */
 
 #include "tclInt.h"
@@ -38,11 +38,9 @@
 #endif
 
 /*
- * Define this if you want to revert to the old behavior of never checking the
- * stack.
+ * Define TCL_NO_STACK_CHECK in the compiler options if you want to revert to
+ * the old behavior of never checking the stack.
  */
-
-#undef TCL_NO_STACK_CHECK
 
 /*
  * Define this if you want to see a lot of output regarding stack checking.
